--- a/inst/rmd/ML_report_function.Rmd
+++ b/inst/rmd/ML_report_function.Rmd
@@ -25,7 +25,12 @@ params:
 }
 </style>
 
-![]()
+```{r, echo=FALSE}
+htmltools::img(src = "https://raw.githubusercontent.com/ningzhibin/rmdocpu/master/inst/rmd/iMetaReport.png", 
+               alt = 'logo', 
+               style = 'position:absolute; top:0; right:0; padding:10px;width:100px;height:100px;')
+```
+
 
 ```{r setup, include=FALSE}
 
