--- a/inst/rmd/MQ_report_summary.Rmd
+++ b/inst/rmd/MQ_report_summary.Rmd
@@ -26,6 +26,14 @@ params:
 </style>
 
 
+```{r, echo=FALSE}
+htmltools::img(src = "https://raw.githubusercontent.com/ningzhibin/rmdocpu/master/inst/rmd/iMetaReport.png", 
+               alt = 'logo', 
+               style = 'position:absolute; top:0; right:0; padding:10px;width:150px;height:150px;')
+```
+
+
+
 ```{r setup, include=FALSE}
 # enviroment setup
 knitr::opts_chunk$set(echo = FALSE,warning = FALSE, message = FALSE, cache = TRUE)
@@ -318,6 +326,11 @@ if(is.null(params$summary_file_tbl)){
 # 1st columns as sample name, 2nd column as experiment name, 3rd column and after as grouping
 
 meta_table <- params$meta_table 
+# if there is any null value in the meta colum, set the meta as NULL
+if(any(is.na(meta_table$meta1))){
+  meta_table <- NULL
+}
+
 
 # or test with metal files
 # meta_table <- read.delim("summary1_meta.txt", header = TRUE, check.names = FALSE, stringsAsFactors = FALSE)
